Fix: add margin bottom to add task button to prop it up on mobile device

--- a/src/style.css
+++ b/src/style.css
@@ -183,4 +183,7 @@ div.add-project {
   .overlay.active {
     transform: translateY(0);
   }
+  .add-task-btn {
+    margin-bottom: 50px;
+  }
 }
